fixed slightly off center navbar bug on mobile and tablet

--- a/components/navbar/navbar.module.css
+++ b/components/navbar/navbar.module.css
@@ -106,17 +106,16 @@
   }
 
   .NavigationItemsMobile {
-    display: none;
-  }
-
-  .NavigationItemsMobile {
     display: block;
     position: absolute;
     background-color: white;
-    width: 98%;
+    width: 100%;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+    margin-top: -1px;
+    left: 0;
+    right: 0;
   }
 
   .NavigationItemMobile {
